--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-inner-image-zoom": "^3.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^8.2.0",
