--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^3.35.3",
     "autosuggest-highlight": "^3.2.1",
     "axios": "^0.26.1",
+    "crypto-js": "^4.1.1",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
