--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-data-table-component": "^7.4.7",
     "react-device-detect": "^2.2.3",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^11.16.2",
     "react-inner-image-zoom": "^3.0.0",
     "react-router-dom": "^6.2.2",
